--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Builder</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <script src="js/html2pdf.bundle.min.js"></script> <!-- Ensure this script is included -->
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -13,20 +15,25 @@
             background-color: #f9f9e1;
             color: #333;
         }
+
         #app {
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
+            position: relative;
         }
+
         header {
             text-align: center;
             margin-bottom: 20px;
             color: #444;
         }
+
         main {
             display: flex;
             gap: 20px;
         }
+
         section {
             flex: 1;
             background: #ffffff;
@@ -34,28 +41,36 @@
             border-radius: 10px;
             border: 2px solid #f1c40f;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+            position: relative;
         }
+
         h1 {
             font-weight: 700;
             color: #f1c40f;
         }
+
         h2 {
             margin-top: 0;
             color: #f1c40f;
         }
+
         form {
             display: grid;
             gap: 15px;
+            position: relative;
         }
+
         .form-field {
             display: flex;
             flex-direction: column;
         }
+
         .form-field label {
             margin-bottom: 5px;
             font-weight: 700;
             color: #333;
         }
+
         .form-field input, .form-field textarea {
             padding: 12px;
             border: 2px solid #f1c40f;
@@ -63,20 +78,12 @@
             font-size: 16px;
             background-color: #fffef2;
         }
+
         .form-field textarea {
             resize: vertical;
             min-height: 100px;
         }
-        /* Profile Picture Preview */
-        #profile-preview {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            border: 2px solid #f1c40f;
-            object-fit: cover;
-            display: none;
-            margin-bottom: 10px;
-        }
+
         /* Buttons */
         button {
             padding: 12px 24px;
@@ -86,23 +93,27 @@
             cursor: pointer;
             transition: background-color 0.3s;
         }
+
         button#generate-resume-btn {
             background-color: #4caf50;
             color: #ffffff;
             font-weight: bold;
-            font-style: italic;
         }
+
         button#generate-resume-btn:hover {
             background-color: #45a049;
         }
+
+        /* New Download Resume Button */
         button#download-resume-btn {
-            display: none;
-            background-color: #e67e22;
-            color: #ffffff;
+            display: none; /* Initially hidden */
+            background-color: #e74c3c;
+            color: white;
             font-weight: bold;
         }
+
         button#download-resume-btn:hover {
-            background-color: #d35400;
+            background-color: #c0392b;
         }
     </style>
 </head>
@@ -116,79 +127,57 @@
             <section id="resume-section">
                 <h2>Fill Your Details</h2>
                 <form id="resume-form">
-                    
-                    <!-- Profile Picture Preview -->
-                    <img id="profile-preview" src="" alt="Profile Picture">
-                    
-                    <div class="form-field">
-                        <label for="profile-pic">Upload Profile Picture:</label>
-                        <input type="file" id="profile-pic" accept="image/*">
-                    </div>
-
                     <div class="form-field">
                         <label for="name">Name:</label>
-                        <input type="text" id="name" required>
+                        <input type="text" id="name" name="name" required>
                     </div>
 
                     <div class="form-field">
                         <label for="about">About Me:</label>
-                        <textarea id="about" required></textarea>
+                        <textarea id="about" name="about" required></textarea>
                     </div>
 
                     <div class="form-field">
                         <label for="contact">Contact:</label>
-                        <input type="text" id="contact" required>
+                        <input type="text" id="contact" name="contact" required>
                     </div>
 
                     <div class="form-field">
                         <label for="email">Email:</label>
-                        <input type="email" id="email" required>
+                        <input type="email" id="email" name="email" required>
                     </div>
 
                     <div class="form-field">
                         <label for="education">Education:</label>
-                        <textarea id="education" required></textarea>
+                        <textarea id="education" name="education" required></textarea>
                     </div>
 
                     <div class="form-field">
                         <label for="experience">Work Experience:</label>
-                        <textarea id="experience" required></textarea>
+                        <textarea id="experience" name="experience" required></textarea>
                     </div>
 
+                    <!-- Generate Resume Button -->
                     <button type="submit" id="generate-resume-btn">Generate Resume</button>
-                    <button id="download-resume-btn">Download CV</button>
+
+                    <!-- New Download Resume Button -->
+                    <button type="button" id="download-resume-btn">Download Resume</button>
                 </form>
+            </section>
+
+            <!-- Resume Preview Section -->
+            <section id="resume-preview" style="display: none;">
+                <h2>Resume Preview</h2>
+                <div id="resume-content"></div>
             </section>
         </main>
     </div>
 
-    <!-- Include html2pdf -->
-    <script src="js/html2pdf.bundle.min.js"></script>
     <script>
-        const profilePicInput = document.getElementById('profile-pic');
-        const profilePreview = document.getElementById('profile-preview');
-        const resumeForm = document.getElementById('resume-form');
-        const downloadBtn = document.getElementById('download-resume-btn');
-        let profilePicData = '';
-
-        // Handle Profile Picture Upload
-        profilePicInput.addEventListener('change', () => {
-            const file = profilePicInput.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = (e) => {
-                    profilePicData = e.target.result;
-                    profilePreview.src = profilePicData;
-                    profilePreview.style.display = 'block';
-                };
-                reader.readAsDataURL(file);
-            }
-        });
-
-        // Handle Form Submission & Preview
-        resumeForm.addEventListener('submit', function (event) {
+        document.getElementById('resume-form').addEventListener('submit', function (event) {
             event.preventDefault();
 
+            // Get form values
             const name = document.getElementById('name').value;
             const about = document.getElementById('about').value;
             const contact = document.getElementById('contact').value;
@@ -196,39 +185,30 @@
             const education = document.getElementById('education').value;
             const experience = document.getElementById('experience').value;
 
-            const previewWindow = window.open('', '_blank');
-            previewWindow.document.write(`
-                <html lang="en">
-                <head>
-                    <meta charset="UTF-8">
-                    <title>Resume Preview</title>
-                    <style>
-                        body { font-family: 'Roboto', sans-serif; background: #f9f9e1; padding: 20px; }
-                        .resume { max-width: 800px; background: white; padding: 20px; border: 2px solid #f1c40f; border-radius: 10px; }
-                        img { width: 120px; height: 120px; border-radius: 50%; border: 2px solid #f1c40f; }
-                        h1, h2 { color: #f1c40f; }
-                        p { margin: 8px 0; }
-                    </style>
-                </head>
-                <body>
-                    <div class="resume">
-                        <img src="${profilePicData}" alt="Profile Picture">
-                        <h1>${name}</h1>
-                        <p><b>About:</b> ${about}</p>
-                        <p><b>Contact:</b> ${contact}</p>
-                        <p><b>Email:</b> ${email}</p>
-                        <p><b>Education:</b> ${education}</p>
-                        <p><b>Work Experience:</b> ${experience}</p>
-                    </div>
-                </body>
-                </html>
-            `);
-            previewWindow.document.close();
-            downloadBtn.style.display = 'block';
+            // Create resume preview content
+            const resumeContent = `
+                <div style="border: 2px solid #f1c40f; padding: 20px; border-radius: 10px; background: #fffef2;">
+                    <h1 style="color: #f1c40f;">${name}</h1>
+                    <p><strong>About Me:</strong> ${about}</p>
+                    <p><strong>Contact:</strong> ${contact}</p>
+                    <p><strong>Email:</strong> ${email}</p>
+                    <p><strong>Education:</strong> ${education}</p>
+                    <p><strong>Work Experience:</strong> ${experience}</p>
+                </div>
+            `;
+
+            // Show preview
+            document.getElementById('resume-content').innerHTML = resumeContent;
+            document.getElementById('resume-preview').style.display = 'block';
+
+            // Show Download Button
+            document.getElementById('download-resume-btn').style.display = 'block';
         });
 
-        downloadBtn.addEventListener('click', function () {
-            html2pdf().from(document.body).save('resume.pdf');
+        // Download Resume as PDF
+        document.getElementById('download-resume-btn').addEventListener('click', function () {
+            const resumeSection = document.getElementById('resume-content');
+            html2pdf().from(resumeSection).save('resume.pdf');
         });
     </script>
 </body>
